--- a/.github/workflows/issue-automation.yml
+++ b/.github/workflows/issue-automation.yml
@@ -4,6 +4,9 @@ on:
   issues:
     types: [opened, edited, labeled]
 
+permissions:
+  issues: write
+
 jobs:
   process-issue:
     runs-on: ubuntu-latest
@@ -13,11 +16,11 @@ jobs:
 
       - name: Process Bug Report
         if: |
-          contains(github.event.issue.labels.*.name, 'bug') && 
-          github.event.action == 'opened'
+          (contains(github.event.issue.labels.*.name, 'bug') || 
+           github.event.label.name == 'bug') && 
+          (github.event.action == 'opened' || github.event.action == 'labeled')
         run: |
           echo "Processing bug report #${{ github.event.issue.number }}"
-          # 添加评论
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
@@ -26,11 +29,11 @@ jobs:
 
       - name: Process Feature Request
         if: |
-          contains(github.event.issue.labels.*.name, 'epic') && 
-          github.event.action == 'opened'
+          (contains(github.event.issue.labels.*.name, 'epic') || 
+           github.event.label.name == 'epic') && 
+          (github.event.action == 'opened' || github.event.action == 'labeled')
         run: |
           echo "Processing feature request #${{ github.event.issue.number }}"
-          # 添加评论
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
@@ -39,11 +42,11 @@ jobs:
 
       - name: Process Maintenance Request
         if: |
-          contains(github.event.issue.labels.*.name, 'maintenance') && 
-          github.event.action == 'opened'
+          (contains(github.event.issue.labels.*.name, 'maintenance') || 
+           github.event.label.name == 'maintenance') && 
+          (github.event.action == 'opened' || github.event.action == 'labeled')
         run: |
           echo "Processing maintenance request #${{ github.event.issue.number }}"
-          # 添加评论
           curl -X POST \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
